# Lagometer

./: .gitignore  CMakeLists.txt  Main.qml  README.md  design.py  design.ui  lagometer.py  requirements.txt  setup.py
.github/workflows/: build.yml
include/: globalshortcut.h  lagometer.h  pingservice.h
qml/: Main.qml  SettingsWindow.qml
qml/Singletons/: UserSettings.qml
src/: globalshortcut.cpp  lagometer.cpp  lagometer.py  main.cpp  pingservice.cpp  setup.py
src/ui/: design.ui
tools/: installer.iss
